--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/node": "^17.0.31",
+    "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "chai": "^4.3.0",
@@ -26,5 +28,9 @@
     "tsc-watch": "^4.2.9",
     "typedoc": "^0.22.13",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "yargs": "^17.4.1"
   }
 }
