--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/basicFunctions.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --exit",
     "coverage": "nyc npm test && nyc report --reporter=lcov",
     "start": "tsc-watch --onSuccess \"node dist/basicFunctions.js\"",
     "doc": "typedoc; touch ./docs/.nojekyll"
