--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.2.15",
+    "@types/express": "^4.17.13",
     "@types/mocha": "^8.2.1",
     "@types/node": "^17.0.31",
     "@types/yargs": "^17.0.10",
@@ -31,6 +32,8 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "express": "^4.18.1",
+    "tsconfig-paths": "^4.0.0",
     "yargs": "^17.4.1"
   }
 }
