--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "valid-jsdoc": "off",
         "max-len": "off",
         "object-curly-spacing": "off",
-        "space-before-blocks": "off"
+        "space-before-blocks": "off",
+        "eslint-disable-next-line" : "new-cap"
     }
 }
