--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bson": "^4.2.0",
     "@types/chai": "^4.2.15",
     "@types/express": "^4.17.13",
     "@types/mocha": "^8.2.1",
+    "@types/mongodb": "^3.6.20",
     "@types/node": "^17.0.31",
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
@@ -31,8 +33,11 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "chalk": "^4.1.2",
     "express": "^4.18.1",
+    "mongodb": "^3.7.3",
+    "mongoose": "^6.3.3",
     "tsconfig-paths": "^4.0.0",
     "yargs": "^17.4.1"
   }
